# e2ee-backend-adapter

./: Cargo.toml  README.md  mkdocs.yml
.github/workflows/: docs-pages.yml  release-crates.yml
crates/adapter-cli/: Cargo.toml
crates/adapter-cli/src/: main.rs
crates/adapter-core/: Cargo.toml
crates/adapter-core/src/: config.rs  lib.rs
crates/adapter-core/src/auth/: mod.rs
crates/adapter-core/src/db/: entity_store.rs  mod.rs  postgres.rs
crates/adapter-core/src/manifest/: mod.rs
crates/adapter-core/src/routes/: graphql.rs  rest.rs
crates/adapter-core/src/schema/: config.rs  diff.rs  export.rs  mod.rs
crates/adapter-server/: Cargo.toml
crates/adapter-server/src/: main.rs
docs/: index.md
docs/developer/: architecture.md
docs/user/: database-tooling.md  file-lifecycle.md  getting-started.md  schema-manifest.md
scripts/: next-version.sh  publish-crates.sh  set-version.sh
