[workspace]
members = [
  "crates/adapter-cli",
  "crates/adapter-core",
]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/benedikt-weyer/e2ee-backend-adapter#readme"
license = "Apache-2.0"
repository = "https://github.com/benedikt-weyer/e2ee-backend-adapter"
version = "3.0.0"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
e2ee-backend-adapter = { version = "3.0.0", path = "crates/adapter-core" }
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["chrono", "json", "macros", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
