[package]
name = "e2ee-backend-adapter"
description = "Manifest-driven backend adapter library and server runtime for e2ee-client-backend"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = ["crates-io"]
readme = "../../README.md"
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
